--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   "author": "Risto Virtaharju <rvirtaha@hotmail.com>",
   "engines": {
     "pnpm": ">=10.0.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "husky": "^9.1.7"
+  },
+  "scripts": {
+    "prepare": "husky"
   }
 }
