--- a/release-please-config.json
+++ b/release-please-config.json
@@ -11,6 +11,15 @@
             "extra-files": [
                 "packages/visual-assets/README.md"
             ]
+        },
+        ".": {
+            "changelog-path": "CHANGELOG.md",
+            "release-type": "node",
+            "bump-minor-pre-major": false,
+            "bump-patch-for-minor-pre-major": false,
+            "draft": false,
+            "prerelease": false
         }
-    }
+    },
+    "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
