--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,10 +10,13 @@
             "prerelease": false
         },
         "packages/visual-assets": {
+            "package-name": "visual-assets",
+            "changelog-path": "CHANGELOG.md",
             "release-type": "node",
-            "extra-files": [
-                "packages/visual-assets/README.md"
-            ]
+            "bump-minor-pre-major": true,
+            "bump-patch-for-minor-pre-major": true,
+            "draft": false,
+            "prerelease": false
         }
     },
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
