--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
-        with:
-          config-file: release-please-config.json
