ci: release packages in gh pacakge registry

--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   },
   "scripts": {
     "prepare": "husky"
-  }
+  },
+  "publishConfig": {
+    "@prodeko:registry": "https://npm.pkg.github.com/"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
