--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,9 @@ jobs:
         with:
           node-version: 22
           registry-url: https://npm.pkg.github.com/
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: |
-            - args: [--frozen-lockfile, --strict-peer-dependencies]
-      - run: pnpm publish --recursive
+      - run: npm ci
+        if: ${{ steps.release.outputs.releases_created }}
+      - run: npm publish --workspaces
         if: ${{ steps.release.outputs.releases_created }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
