--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "prodeko-design-system",
-  "version": "0.1.0",
   "private": true,
   "description": "",
   "author": "Risto Virtaharju <rvirtaha@hotmail.com>",
-  "engines": {
-    "pnpm": ">=10.0.0"
-  },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "husky": "^9.1.7",
     "release-please": "^17.0.0"
   },
+  "publishConfig": {
+    "@prodeko:registry": "https://npm.pkg.github.com/"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prepare": "husky"
   }
