--- a/packages/visual-assets/package.json
+++ b/packages/visual-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prodeko/visual-assets",
-  "version": "0.1.3",
+  "version": "0.1.0",
   "description": "Visual web assets of Prodeko",
   "author": "Risto Virtaharju <rvirtaha@hotmail.com>",
   "type": "module",
@@ -14,7 +14,8 @@
     "dist/"
   ],
   "scripts": {
-    "build:sprites": "node scripts/build-sprites.js"
+    "build:sprites": "node scripts/build-sprites.js",
+    "install:favicons": "cp -r dist/favicons $INIT_CWD/public"
   },
   "devDependencies": {
     "svg-sprite": "^2.0.4"
