--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "release-please": "^17.0.0"
   },
   "publishConfig": {
+    "access": "public",
     "@prodeko:registry": "https://npm.pkg.github.com/"
   },
   "workspaces": [
