--- a/packages/tailwind-plugin/package.json
+++ b/packages/tailwind-plugin/package.json
@@ -16,6 +16,7 @@
         "tailwindcss": "^3.4.0"
     },
     "publishConfig": {
+        "access": "public",
         "registry": "https://npm.pkg.github.com/"
     },
     "repository": {
