--- a/packages/visual-assets/package.json
+++ b/packages/visual-assets/package.json
@@ -21,6 +21,7 @@
     "svg-sprite": "^2.0.4"
   },
   "publishConfig": {
+    "access": "public",
     "registry": "https://npm.pkg.github.com/"
   },
   "repository": {
