feat(vis): add install binary to copy favicons
run npx prodeko-install-favicons to use them statically in your project

--- a/packages/visual-assets/package.json
+++ b/packages/visual-assets/package.json
@@ -8,6 +8,9 @@
     ".": "./index.js"
   },
   "main": "index.js",
+  "bin": {
+    "prodeko-install-favicons": "scripts/copy-favicons.js"
+  },
   "types": "index.d.ts",
   "files": [
     "index.js",
