--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,9 +27,11 @@ jobs:
         with:
           node-version: 22
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
+      - run: npm install -g pnpm
         if: ${{ steps.release.outputs.releases_created == 'true' }}
-      - run: npm publish --workspaces
+      - run: pnpm install --frozen-lockfile
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
+      - run: pnpm publish -r --access public
         if: ${{ steps.release.outputs.releases_created == 'true' }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
