fix: added install favicons to npm files

--- a/packages/visual-assets/package.json
+++ b/packages/visual-assets/package.json
@@ -16,7 +16,7 @@
     "index.js",
     "index.d.ts",
     "dist/",
-    "scripts/install-favicons"
+    "scripts/install-favicons.js"
   ],
   "scripts": {
     "build:sprites": "node scripts/build-sprites.js",
