fix: corrected bin entry script name

--- a/packages/visual-assets/package.json
+++ b/packages/visual-assets/package.json
@@ -9,7 +9,7 @@
   },
   "main": "index.js",
   "bin": {
-    "prodeko-install-favicons": "scripts/copy-favicons.js"
+    "prodeko-install-favicons": "scripts/install-favicons.js"
   },
   "types": "index.d.ts",
   "files": [
