--- a/packages/visual-assets/package.json
+++ b/packages/visual-assets/package.json
@@ -27,6 +27,8 @@
     "build": "npm run build:sprites && npm run build:react"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/plugin-svgo": "^8.1.0",
